Fix Screen on mobile

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -7,5 +7,6 @@
   flex-direction: column;
   align-items: center; /* Center horizontally */
   justify-content: center; /* Center vertically */
-  height: 100vh; /* Set container height to full viewport height */
+  height: 100vh;
+  margin-top: 40px; /* Set container height to full viewport height */
 }
